--- a/main.css
+++ b/main.css
@@ -1,13 +1,13 @@
 span {
     display: block;
     overflow: hidden;
-    padding: 0 6px 0 0px
+    padding: 0 6px 0 0
 }
 
 input.search-query {
     width: 100%;
     border-radius: 0.3em;
-    margin: 0px;
+    margin: 0;
     padding: 2px 2px 2px 4px;
 }
 
@@ -16,7 +16,7 @@ textarea {
 }
 
 input.add {
-    margin: 10px 0px 10px 0px;
+    margin: 10px 0 10px 0;
 }
 
 html, input, textarea, label, button, text {
@@ -25,20 +25,20 @@ html, input, textarea, label, button, text {
 }
 
 html {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 
 body {
     background-color: #C1E2F0;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 
 ul.report-list {
   list-style-type: none;
-  padding: 0px;
-  margin: 0px 0px 0.5em 0px;
+  padding: 0;
+  margin: 0 0 0.5em 0;
 }
 
 ul.report-list li {
