--- a/main.css
+++ b/main.css
@@ -47,3 +47,22 @@ ul.report-list li {
     margin: 1px 1px 1px 1px;
     border-radius: 0.3em;
 }
+
+ul.attachmentlist
+{
+    padding: 0 0 0 0;
+    margin: 0;
+}
+
+ul.attachmentlist li
+{
+    float: left;
+    list-style-type: none;
+    padding: 0 5px 0 0;
+    margin: 0;
+}
+
+.image-upload > input
+{
+    display: none;
+}
