--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,11 @@ html, input, textarea, label, button {
     font-size: 1em;
 }
 
+.target-title {
+    padding: 0 0 0.2em 0;
+    margin: 0;
+}
+
 html {
     padding: 0;
     margin: 0;
@@ -36,21 +41,29 @@ html {
 
 body {
     background-color: #C1E2F0;
-    padding: 0;
+    padding: 0 0.4em 0.2em 0.3em;
     margin: 0;
 }
 
 ul.report-list {
   list-style-type: none;
   padding: 0;
-  margin: 0 0 0.5em 0;
+  margin: 0 0 0.3em 0;
 }
 
 ul.report-list li {
     background-color: #eee;
-    padding: 0.2em;
-    margin: 1px 1px 1px 1px;
+    padding: 0.1em 0.2em 0.1em 0.25em;
+    margin: 0;
     border-radius: 0.3em;
+}
+
+.report-list-date {
+    font-size: 80%;
+}
+
+.report-list-description {
+
 }
 
 ul.attachmentlist
