--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,62 @@
+#aForm {
+    padding: 0;
+    margin: 0;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+    display: flex;
+    flex-direction: column;
+}
+
+#aForm > * {
+    margin: 0 0 0.5em 0;
+}
+
+#description {
+    -webkit-flex: 1;
+    flex: 1;
+    resize:none;
+    padding: 0.5em;
+}
+
+img {
+    max-width: 80%;
+}
+
+.toprow {
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    border: 0;
+    border-bottom:0.1em solid #c9c9c9;
+}
+
+.left-button {
+    margin: 0 0 0 0.5em;
+    vertical-align: middle;
+}
+
+.right-button {
+    margin: 0 0.5em 0 0;
+    vertical-align: middle;
+}
+
+.centered-title {
+    -webkit-flex: 1;
+    flex: 1;
+    text-align: center;
+    font-size: 140%;
+    font-weight: 600;
+    padding: 0.2em 0 0.3em 0;
+    margin: 0;
+}
+
+.invisible {
+    visibility:hidden;
+}
+
 .target-title {
     font-size: 140%;
     font-weight: 600;
@@ -20,7 +79,7 @@ div.search-bar {
     background-color: #C9C9CE;
     width:100%;
     min-width:300px;
-    max-width:600px;
+    max-width:2600px;
     display: -webkit-flex;
     display: flex;
 }
@@ -54,7 +113,11 @@ img.fitpage {
 }
 
 textarea {
-    width: 100%;
+    width:100%;
+    height:100%;
+    box-sizing: border-box;         /* For IE and modern versions of Chrome */
+    -moz-box-sizing: border-box;    /* For Firefox                          */
+    -webkit-box-sizing: border-box; /* For Safari                           */
 }
 
 input.add {
