--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
     -webkit-flex: 1;
     flex: 1;
     resize:none;
+    border-style: none;
     padding: 0.5em;
 }
 
@@ -29,6 +30,9 @@ img {
     flex-direction: row;
     width: 100%;
     align-items: center;
+}
+
+.gray-bottom-divider {
     border: 0;
     border-bottom:0.1em solid #c9c9c9;
 }
